--- a/src/main/resources/templates/display-collection.html
+++ b/src/main/resources/templates/display-collection.html
@@ -5,6 +5,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-    <p>Hello, <span th:text="${name}"></span>!</p>
+    <ul>
+	    <li th:each="name: ${names}">
+	    	<span th:text="${name}"></span>
+	    </li>
+    </ul>
 </body>
 </html>
