--- a/src/main/resources/templates/display-message.html
+++ b/src/main/resources/templates/display-message.html
@@ -5,6 +5,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-    <p>Hello, <span th:text="${name}"></span>!</p>
+    <p><span th:text="#{Message}"></span></p>
 </body>
 </html>
